Moved temp signout button to Desktop component, changed z-index of button to fix signout issues while IM window is open

--- a/src/Windows/BuddyList/BuddyList.css
+++ b/src/Windows/BuddyList/BuddyList.css
@@ -2,8 +2,9 @@
 button.temp-btn {
   cursor: pointer;
   position: fixed;
-  top: 0;
-  left: 0;
+  left: 0px;
+  top: 0px;
+  z-index: 1000;
   width: 100px;
   height: 50px;
   margin: 0.5rem;
